# matrix

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  homebrew.yml  release.yml  tag-release.yml
crates/matrix-construct/: Cargo.toml  Dockerfile  README.md  openapi.json
crates/matrix-construct/src/: main.rs
crates/matrix-enter/: Cargo.toml
crates/matrix-enter/src/: main.rs
docs/: cli-popular-cmds.md  cli-repl.md  cli.md  graphql.md  legacy-compatibility-migration.md  producer-coverage.md  producer-onboarding.md  query-examples.md
examples/producers/: fact-batch.json  github-actions-matrix-facts.yml
examples/queries/: aphrodite-eunomia-path.graphql  chaincode-athena-compatibility.sql  component-status.graphql  current-runtime.sql  eos-chaincode-members.sql  operator-evidence.graphql  producer-coverage.graphql  putto-aphrodite-works-with.graphql  resolve-component.graphql  version-evidence.graphql  version-for.graphql
examples/sql-packs/: release-bundle.sql  vdr.sql
fixtures/ingest/: cyclonedx.json  junit.xml  k6.json  microcks.json  nox.json  tox.json
skills/matrix/: SKILL.md
src/: lib.rs  main.rs
src/ingest/: junit.rs  mod.rs  runner.rs  sbom.rs  test_stage.rs
