[package]
name = "matrix"
version = "0.3.9"
edition = "2024"
description = "A compatibility matrix CLI for software zones, levels, facts, gates, and traces."
license = "Apache-2.0"
repository = "https://github.com/adrianmross/matrix"

[workspace]
members = [".", "crates/matrix-construct", "crates/matrix-enter"]
resolver = "3"

[features]
default = []
interactive = ["dep:comfy-table", "dep:nu-ansi-term", "dep:reedline"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
clap_complete = "4.5.55"
comfy-table = { version = "7.2.2", optional = true }
directories = "6.0.0"
nu-ansi-term = { version = "0.50.3", optional = true }
reedline = { version = "0.48.0", optional = true }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2.1.3"
